[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/EquationPlus.gd" type="Script" id=1]
[ext_resource path="res://Assets/Equation_atlas.tres" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.5, 19.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="EquationPlus" type="Node2D"]
z_index = -1
script = ExtResource( 1 )

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2( 0, 1.5 )
shape = SubResource( 3 )

[node name="EnemyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
position = Vector2( -11, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 60, 0, 60, 30 )

[node name="Cooldown" type="Timer" parent="."]

[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
